--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.3.10",
