--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-images": "^3.3.25",
