--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.26",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.21",
+    "gatsby-plugin-mdx": "^1.2.37",
     "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-scroll-reveal": "0.0.7",
@@ -24,11 +28,14 @@
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-images": "^3.3.25",
+    "gatsby-remark-prismjs": "^3.5.11",
+    "gatsby-remark-smartypants": "^2.3.10",
     "gatsby-source-filesystem": "^2.3.23",
-    "gatsby-transformer-remark": "^2.8.28",
+    "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.4.2",
     "lodash": "^4.17.19",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -36,8 +43,12 @@
     "react-reveal": "^1.2.2",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
+    "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-grand-view": "^0.16.19"
+    "typography-theme-grand-view": "^0.16.19",
+    "typography-theme-lincoln": "^0.16.19",
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "typography-theme-wordpress-kubrick": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.0.5"
