--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
+    "babel-plugin-styled-components": "^1.11.1",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.26",
     "gatsby-awesome-pagination": "^0.3.6",
@@ -25,12 +26,14 @@
     "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-plugin-typography": "^2.5.10",
     "gatsby-remark-images": "^3.3.25",
     "gatsby-remark-prismjs": "^3.5.11",
     "gatsby-remark-smartypants": "^2.3.10",
     "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-source-github-api": "^0.2.1",
     "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.4.2",
@@ -39,9 +42,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-typography": "^0.16.19",
+    "styled-components": "^5.2.0",
     "typography": "^0.16.19",
     "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
@@ -51,7 +56,7 @@
     "typography-theme-wordpress-kubrick": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.0.5"
   },
   "keywords": [
     "gatsby"
