--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-reveal": "^1.2.2",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.0",
+    "typewriter-effect": "^2.13.1",
     "typography": "^0.16.19",
     "typography-theme-elk-glen": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19",
