--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.12.0",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-particles-js": "^3.3.0",
     "react-reveal": "^1.2.2",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.0",
