--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
+    "axios": "^0.20.0",
     "babel-plugin-styled-components": "^1.11.1",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.26",
