--- a/package.json
+++ b/package.json
@@ -1,70 +1,50 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-starter-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@mdx-js/mdx": "^1.6.16",
-    "@mdx-js/react": "^1.6.16",
-    "axios": "^0.20.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "emotion-theming": "^10.0.27",
-    "gatsby": "^2.24.26",
-    "gatsby-awesome-pagination": "^0.3.6",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-image": "^2.4.14",
-    "gatsby-plugin-chakra-ui": "^0.1.4",
-    "gatsby-plugin-feed": "^2.5.11",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.21",
-    "gatsby-plugin-mdx": "^1.2.37",
-    "gatsby-plugin-offline": "^3.2.21",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-scroll-reveal": "0.0.7",
-    "gatsby-plugin-sharp": "^2.6.24",
-    "gatsby-plugin-sitemap": "^2.4.11",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-plugin-transition-link": "^1.20.2",
-    "gatsby-plugin-typography": "^2.5.10",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-remark-prismjs": "^3.5.11",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.23",
-    "gatsby-source-github-api": "^0.2.1",
-    "gatsby-transformer-remark": "^2.8.32",
-    "gatsby-transformer-sharp": "^2.5.12",
-    "gsap": "^3.4.2",
-    "lodash": "^4.17.19",
-    "prismjs": "^1.21.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-github-btn": "^1.2.0",
+    "gatsby": "^3.6.2",
+    "gatsby-plugin-feed": "^3.6.0",
+    "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-google-analytics": "^3.6.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-copy-linked-files": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-prismjs": "^4.2.0",
+    "gatsby-remark-responsive-iframe": "^3.2.0",
+    "gatsby-remark-smartypants": "^3.2.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-particles-js": "^3.3.0",
-    "react-reveal": "^1.2.2",
-    "react-typography": "^0.16.19",
-    "styled-components": "^5.2.0",
-    "typewriter-effect": "^2.13.1",
-    "typography": "^0.16.19",
-    "typography-theme-elk-glen": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19",
-    "typography-theme-grand-view": "^0.16.19",
-    "typography-theme-lincoln": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19",
-    "typography-theme-wordpress-kubrick": "^0.16.19"
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "2.2.1"
   },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
+  "main": "n/a",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+  },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -73,12 +53,5 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
