--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Nick La Rosa <nick@nicklarosa.net>",
   "dependencies": {
+    "@craco/craco": "^6.2.0",
     "aws-sdk": "^2.933.0",
     "axios": "^0.21.1",
     "gatsby": "^3.6.2",
@@ -14,17 +15,20 @@
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-postcss": "^4.9.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-autolink-headers": "^4.6.0",
     "gatsby-remark-copy-linked-files": "^3.2.0",
     "gatsby-remark-images": "^4.2.0",
-    "gatsby-remark-prismjs": "^4.2.0",
+    "gatsby-remark-prismjs": "^5.6.0",
     "gatsby-remark-responsive-iframe": "^3.2.0",
     "gatsby-remark-smartypants": "^3.2.0",
+    "gatsby-remark-table-of-contents": "^1.0.0",
     "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-remark": "^4.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
-    "prismjs": "^1.23.0",
+    "prismjs": "^1.24.1",
     "react": "^17.0.1",
     "react-awesome-reveal": "^3.7.2",
     "react-dom": "^17.0.1",
@@ -37,9 +41,13 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.0",
+    "gatsby-remark-code-buttons": "^2.0.7",
     "gatsby-source-github": "^0.0.2",
     "netlify-lambda": "^2.0.10",
-    "prettier": "2.2.1"
+    "postcss": "^8.3.5",
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.2.4"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
